@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2010-2024 Structr GmbH
+ * Copyright (C) 2010-2025 Structr GmbH
  *
  * This file is part of Structr <http://structr.org>.
  *
@@ -48,7 +48,7 @@ public abstract class AdminConsoleCommand {
 
 			try {
 
-				return cls.newInstance();
+				return cls.getDeclaredConstructor().newInstance();
 
 			} catch (Throwable t) {}
 		}
