@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2010-2024 Structr GmbH
+ * Copyright (C) 2010-2025 Structr GmbH
  *
  * This file is part of Structr <http://structr.org>.
  *
@@ -31,22 +31,24 @@ import org.structr.api.config.Setting;
 import org.structr.api.config.Settings;
 import org.structr.api.service.*;
 import org.structr.api.util.CountResult;
-import org.structr.common.Permission;
-import org.structr.common.Permissions;
 import org.structr.common.SecurityContext;
-import org.structr.common.VersionHelper;
 import org.structr.common.error.ErrorBuffer;
 import org.structr.common.error.FrameworkException;
 import org.structr.common.event.RuntimeEventLog;
+import org.structr.common.helper.PathHelper;
+import org.structr.common.helper.VersionHelper;
 import org.structr.core.app.StructrApp;
 import org.structr.core.cluster.BroadcastReceiver;
 import org.structr.core.cluster.ClusterManager;
 import org.structr.core.cluster.StructrMessage;
-import org.structr.core.entity.Principal;
-import org.structr.core.graph.FlushCachesCommand;
-import org.structr.core.graph.ManageDatabasesCommand;
-import org.structr.core.graph.NodeService;
-import org.structr.core.graph.Tx;
+import org.structr.core.function.SetLogLevelFunction;
+import org.structr.core.graph.*;
+import org.structr.cron.CronService;
+import org.structr.docs.Documentable;
+import org.structr.docs.impl.service.FtpServiceDocumentable;
+import org.structr.docs.impl.service.MailServiceDocumentable;
+import org.structr.docs.impl.service.SSHServiceDocumentable;
+import org.structr.files.external.DirectoryWatchService;
 import org.structr.schema.ConfigurationProvider;
 import org.structr.schema.SchemaHelper;
 import org.structr.schema.SchemaService;
@@ -58,6 +60,7 @@ import java.net.HttpURLConnection;
 import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.Map.Entry;
 import java.util.concurrent.ConcurrentHashMap;
@@ -72,8 +75,8 @@ public class Services implements StructrServices, BroadcastReceiver {
 	private static final Logger logger                 = LoggerFactory.getLogger(Services.class.getName());
 
 	// singleton instance
-	private static String jvmIdentifier                = ManagementFactory.getRuntimeMXBean().getName();
-	private static final long licenseCheckInterval     = TimeUnit.HOURS.toMillis(2);
+	private static final String jvmIdentifier          = ManagementFactory.getRuntimeMXBean().getName();
+	private static final long licenseCheckInterval     = TimeUnit.DAYS.toMillis(1);
 	private static long lastLicenseCheck               = System.currentTimeMillis();
 	private static Services singletonInstance          = null;
 	private static boolean testingModeDisabled         = false;
@@ -83,7 +86,6 @@ public class Services implements StructrServices, BroadcastReceiver {
 
 	// non-static members
 	private final Map<Class, Map<String, Service>> serviceCache = new ConcurrentHashMap<>(10, 0.9f, 8);
-	private final Set<Permission> permissionsForOwnerlessNodes  = new LinkedHashSet<>();
 	private final Map<String, Class> registeredServiceClasses   = new LinkedHashMap<>();
 	private final List<InitializationCallback> callbacks        = new LinkedList<>();
 	private final Map<String, Object> cachedValues              = new ConcurrentHashMap<>(10, 0.9f, 8);
@@ -123,8 +125,8 @@ public class Services implements StructrServices, BroadcastReceiver {
 
 	private static void checkJavaRuntime() {
 
-		final int expectedMajorVersion = 22;
-		final int expectedMinorVersion = 3;
+		final int expectedMajorVersion = 25;
+		final int expectedMinorVersion = 0;
 
 		final Version expectedVersion  = org.graalvm.home.Version.create(expectedMajorVersion, expectedMinorVersion);
 		final Version foundVersion     = org.graalvm.home.Version.getCurrent();
@@ -148,6 +150,20 @@ public class Services implements StructrServices, BroadcastReceiver {
 	}
 
 	/**
+	 * Call this method to collect documentable services
+	 *
+	 * @param documentables
+	 */
+	public static void collectDocumentation(final List<Documentable> documentables) {
+
+		documentables.add(new FtpServiceDocumentable());
+		documentables.add(new SSHServiceDocumentable());
+		documentables.add(new MailServiceDocumentable());
+		documentables.add(CronService.getDocumentation());
+		documentables.add(DirectoryWatchService.getDocumentation());
+	}
+
+	/**
 	 * Creates and returns a command of the given <code>type</code>. If a command is
 	 * found, the corresponding service will be discovered and activated.
 	 *
@@ -160,7 +176,7 @@ public class Services implements StructrServices, BroadcastReceiver {
 
 		try {
 
-			final T command          = commandType.newInstance();
+			final T command          = commandType.getDeclaredConstructor().newInstance();
 			final Class serviceClass = command.getServiceClass();
 
 			// inject security context first
@@ -174,10 +190,8 @@ public class Services implements StructrServices, BroadcastReceiver {
 				Service service = getService(serviceClass, serviceName);
 				if (service == null) {
 
-					final String activeServiceName = getNameOfActiveService(serviceClass);
-
 					// start service
-					startService(serviceClass, activeServiceName, false);
+					startService(serviceClass, serviceName, false);
 
 					// reload service
 					service = getService(serviceClass, serviceName);
@@ -223,6 +237,8 @@ public class Services implements StructrServices, BroadcastReceiver {
 
 			logger.info("Reading {}..", Settings.ConfigFileName);
 			Settings.loadConfiguration(Settings.ConfigFileName);
+
+			SetLogLevelFunction.setLogLevel(Settings.LogLevel.getValue());
 
 			// this might be the first start with a new / upgraded version
 			// check if we need to do some migration maybe?
@@ -313,9 +329,6 @@ public class Services implements StructrServices, BroadcastReceiver {
 		// start registered services
 		startServices();
 
-		// initialize permissions for ownerless nodes
-		initializePermissionsForOwnerlessNodes();
-
 		// register shutdown hook
 		registerShutdownHook();
 
@@ -327,6 +340,9 @@ public class Services implements StructrServices, BroadcastReceiver {
 
 		// register change handlers for various Settings
 		registerSettingsChangeHandlers();
+
+		// run migration service
+		MigrationService.execute();
 
 		logger.info("Started Structr {}", VersionHelper.getFullVersionInfo());
 		logger.info("---------------- Initialization complete ----------------");
@@ -348,15 +364,8 @@ public class Services implements StructrServices, BroadcastReceiver {
 
 	private void checkForSettingsConflicts() {
 
-		if (Settings.UUIDv4AllowedFormats.getValue().equals("with_dashes") && true == Settings.UUIDv4CreateCompact.getValue()) {
-			logger.error("Unable to start because created UUIDs would contain dashes but this would not be accepted. Please fix the following settings: {} and/or {}", Settings.UUIDv4AllowedFormats.getKey(), Settings.UUIDv4CreateCompact.getKey());
-			System.exit(1);
-		}
+		// possibly check settings for configuration problems
 
-		if (Settings.UUIDv4AllowedFormats.getValue().equals("without_dashes") && false == Settings.UUIDv4CreateCompact.getValue()) {
-			logger.error("Unable to start because created UUIDs would not contain dashes but this would not be accepted. Please fix the following settings: {} and/or {}", Settings.UUIDv4AllowedFormats.getKey(), Settings.UUIDv4CreateCompact.getKey());
-			System.exit(1);
-		}
 	}
 
 	private void registerSettingsChangeHandlers() {
@@ -365,7 +374,39 @@ public class Services implements StructrServices, BroadcastReceiver {
 		Settings.fallbackLocale.setChangeHandler((setting, oldValue, newValue) -> FlushCachesCommand.flushLocalizationCache());
 
 		Settings.UUIDv4AllowedFormats.setChangeHandler((setting, oldValue, newValue) -> RestartRequiredChangeHandler.logRestartRequiredMessage(setting, "Be aware that changing this setting, with existing data, could lead to data being inaccessible or being unable to start. This setting should only be changed with an empty database or in development."));
-		Settings.UUIDv4CreateCompact.setChangeHandler((setting, oldValue, newValue) -> RestartRequiredChangeHandler.logRestartRequiredMessage(setting, "Be aware that changing this setting could lead to not being able to start. This setting should only be changed with an empty database or in development."));
+
+		Settings.UUIDv4CreateCompact.setChangeHandler((setting, oldValue, newValue) -> {
+
+			// changing this setting only has an effect if we accept both UUIDv4 formats
+			if (Settings.UUIDv4AllowedFormats.getValue().equals(Settings.POSSIBLE_UUID_V4_FORMATS.both.toString())) {
+
+				RestartRequiredChangeHandler.logRestartRequiredMessage(setting);
+			}
+		});
+
+		Settings.LogLevel.setChangeHandler((setting, oldValue, newValue) -> {
+			SetLogLevelFunction.setLogLevel(newValue.toString());
+		});
+
+		Settings.DefaultUploadFolder.setChangeHandler((setting, oldValue, newValue) -> {
+
+			final String cleanedNewValue = PathHelper.removeRelativeParts(newValue.toString());
+
+			if (cleanedNewValue.equals("")) {
+
+				logger.info("{}: Unable to save value '{}'. Default upload folder path requires a folder or folder path. Uploading to the root folder is not allowed. Resetting to default.", setting.getKey(), newValue);
+
+				setting.setValue(setting.getDefaultValue());
+
+			} else {
+
+				setting.setValue(cleanedNewValue);
+			}
+		});
+
+		Settings.EmailValidationRegex.setChangeHandler((setting, oldValue, newValue) -> {
+			Settings.updateEmailValidationPattern();
+		});
 	}
 
 	private void startServices() {
@@ -381,7 +422,7 @@ public class Services implements StructrServices, BroadcastReceiver {
 			final StopServiceForMaintenanceMode stopAnnotation  = (StopServiceForMaintenanceMode)serviceClass.getAnnotation(StopServiceForMaintenanceMode.class);
 			final StartServiceInMaintenanceMode startAnnotation = (StartServiceInMaintenanceMode)serviceClass.getAnnotation(StartServiceInMaintenanceMode.class);
 
-			if (maintenanceEnabled == false || (stopAnnotation == null && startAnnotation == null) || (stopAnnotation != null && startAnnotation != null)) {
+			if (!maintenanceEnabled || (stopAnnotation == null && startAnnotation == null) || (stopAnnotation != null && startAnnotation != null)) {
 
 				try {
 
@@ -431,7 +472,7 @@ public class Services implements StructrServices, BroadcastReceiver {
 	private void joinCluster() {
 
 		// Connect to cluster if enabled
-		if (Settings.ClusterModeEnabled.getValue(false) == true) {
+		if (Settings.ClusterModeEnabled.getValue(false)) {
 
 			logger.info("Cluster mode enabled");
 
@@ -529,36 +570,6 @@ public class Services implements StructrServices, BroadcastReceiver {
 				shutdown();
 			}
 		});
-	}
-
-	private void initializePermissionsForOwnerlessNodes() {
-
-		// read permissions for ownerless nodes
-		final String configForOwnerlessNodes = Settings.OwnerlessNodes.getValue();
-		if (StringUtils.isNotBlank(configForOwnerlessNodes)) {
-
-			for (final String permission : configForOwnerlessNodes.split("[, ]+")) {
-
-				final String trimmed = permission.trim();
-				if (StringUtils.isNotBlank(trimmed)) {
-
-					final Permission val = Permissions.valueOf(trimmed);
-					if (val != null) {
-
-						permissionsForOwnerlessNodes.add(val);
-
-					} else {
-
-						logger.warn("Invalid permisson {}, ignoring.", trimmed);
-					}
-				}
-			}
-
-		} else {
-
-			// default
-			permissionsForOwnerlessNodes.add(Permission.read);
-		}
 	}
 
 	public boolean isShutdownDone() {
@@ -664,7 +675,7 @@ public class Services implements StructrServices, BroadcastReceiver {
 
 								final StartServiceInMaintenanceMode startAnnotation = (StartServiceInMaintenanceMode)serviceClass.getAnnotation(StartServiceInMaintenanceMode.class);
 
-								if (maintenanceEnabled == false || startAnnotation != null) {
+								if (!maintenanceEnabled || startAnnotation != null) {
 
 									try {
 
@@ -725,7 +736,7 @@ public class Services implements StructrServices, BroadcastReceiver {
 			// initializers.
 			try {
 
-				configuration = (ConfigurationProvider)Class.forName(configurationClass).newInstance();
+				configuration = (ConfigurationProvider)Class.forName(configurationClass).getDeclaredConstructor().newInstance();
 				configuration.initialize(licenseManager);
 
 			} catch (Throwable t) {
@@ -805,17 +816,10 @@ public class Services implements StructrServices, BroadcastReceiver {
 
 			logger.info("Creating {}..", serviceClass.getSimpleName());
 
-			final Service service = (Service) serviceClass.newInstance();
-
-			if (licenseManager != null && !licenseManager.isValid(service)) {
-
-				logger.error("Configured service {} is not part of the currently licensed Structr Edition.", serviceClass.getSimpleName());
-				return new ServiceResult("Service is not part of the currently licensed Structr Edition", false);
-			}
-
-			final int retryDelay     = service.getRetryDelay();
-			int retryCount           = service.getRetryCount();
-			isVital                  = service.isVital();
+			final Service service = (Service) serviceClass.getDeclaredConstructor().newInstance();
+			final int retryDelay  = service.getRetryDelay();
+			int retryCount        = service.getRetryCount();
+			isVital               = service.isVital();
 
 			while (waitAndRetry && retryCount-- > 0) {
 
@@ -824,9 +828,7 @@ public class Services implements StructrServices, BroadcastReceiver {
 				final ServiceResult result = service.initialize(this, serviceName);
 				if (result.isSuccess()) {
 
-					if (service instanceof RunnableService) {
-
-						RunnableService runnableService = (RunnableService) service;
+					if (service instanceof RunnableService runnableService) {
 
 						if (runnableService.runOnStartup()) {
 
@@ -867,7 +869,7 @@ public class Services implements StructrServices, BroadcastReceiver {
 					if (retryCount > 0) {
 
 						logger.warn("Retrying in {} seconds..", retryDelay);
-						Thread.sleep(retryDelay * 1000);
+						Thread.sleep(retryDelay * 1000L);
 
 					} else {
 
@@ -880,7 +882,9 @@ public class Services implements StructrServices, BroadcastReceiver {
 
 		} catch (Throwable t) {
 
-			if (!disableRetry && isVital) {
+			logger.error("Exception occured when trying to start service " + serviceName, t);
+
+                        if (!disableRetry && isVital) {
 
 				checkVitalService(serviceClass, t);
 
@@ -923,9 +927,7 @@ public class Services implements StructrServices, BroadcastReceiver {
 
 		try {
 
-			if (service instanceof RunnableService) {
-
-				RunnableService runnableService = (RunnableService) service;
+			if (service instanceof RunnableService runnableService) {
 
 				if (runnableService.isRunning()) {
 					logger.info("Stopping {}..", service.getName());
@@ -1188,10 +1190,6 @@ public class Services implements StructrServices, BroadcastReceiver {
 		return Settings.SessionTimeout.getValue();
 	}
 
-	public static Set<Permission> getPermissionsForOwnerlessNodes() {
-		return getInstance().permissionsForOwnerlessNodes;
-	}
-
 	public String getEdition() {
 
 		if (licenseManager != null) {
@@ -1308,8 +1306,8 @@ public class Services implements StructrServices, BroadcastReceiver {
 
 		if (t != null) {
 
-			logger.error("Vital service {} failed to start with {}, aborting.", service.getSimpleName(), t.getMessage() );
-			System.err.println("Vital service " + service.getSimpleName() + " failed to start with " + t.getMessage() + ", aborting.");
+			logger.error("Vital service {} failed to start with \"{}\", aborting.", service.getSimpleName(), t.getMessage() );
+			System.err.println("Vital service " + service.getSimpleName() + " failed to start with \"" + t.getMessage() + "\", aborting.");
 
 		} else {
 
@@ -1347,16 +1345,10 @@ public class Services implements StructrServices, BroadcastReceiver {
 		getServices(type).put(name, service);
 	}
 
-	public void updateLicense() {
-		if (licenseManager != null) {
-			licenseManager.refresh(true);
-		}
-	}
-
 	private void checkLicense() {
 
 		if (licenseManager != null) {
-			licenseManager.refresh(false);
+			licenseManager.refresh();
 		}
 	}
 
@@ -1391,17 +1383,17 @@ public class Services implements StructrServices, BroadcastReceiver {
 		Services.getInstance().broadcastMessageToCluster("data-changed", ids);
 	}
 
-	public void broadcastLogin(final Principal user) {
+	public void broadcastLogin(final long userId) {
 		try {
-			Services.getInstance().broadcastMessageToCluster("data-changed", List.of(user.getNode().getId().getId()), true);
+			Services.getInstance().broadcastMessageToCluster("data-changed", List.of(userId), true);
 		} catch (Throwable t) {
 			t.printStackTrace();
 		}
 	}
 
-	public void broadcastLogout(final Principal user) {
+	public void broadcastLogout(final long userId) {
 		try {
-			Services.getInstance().broadcastMessageToCluster("data-changed", List.of(user.getNode().getId().getId()), true);
+			Services.getInstance().broadcastMessageToCluster("data-changed", List.of(userId), true);
 		} catch (Throwable t) {
 			t.printStackTrace();
 		}
@@ -1438,10 +1430,6 @@ public class Services implements StructrServices, BroadcastReceiver {
 				break;
 
 			case "data-changed":
-
-				if (this.isClusterStarted) {
-					this.removeFromCache(message.getPayloadAsList());
-				}
 				break;
 
 			case "startup-complete":
@@ -1458,18 +1446,6 @@ public class Services implements StructrServices, BroadcastReceiver {
 
 				break;
 		}
-	}
-
-	public void removeFromCache(final List<Long> ids) {
-
-		final DatabaseService db = getDatabaseService();
-
-		// db.identity() converts a long ID into an Identity object
-		ids.stream().map(db::identify).forEach(id -> {
-			db.removeNodeFromCache(id);
-			db.removeRelationshipFromCache(id);
-		});
-
 	}
 
 	@Override
@@ -1546,15 +1522,14 @@ public class Services implements StructrServices, BroadcastReceiver {
 				if (input != null) {
 
 					// consume response
-					final String responseText          = IOUtils.toString(input, "utf-8");
+					final String responseText          = IOUtils.toString(input, StandardCharsets.UTF_8);
 					final Map<String, Object> response = gson.fromJson(responseText, Map.class);
 
 					if (response != null) {
 
 						final Object result = response.get("result");
-						if (result instanceof List) {
+						if (result instanceof List list) {
 
-							final List list = (List)result;
 							if (!list.isEmpty()) {
 
 								final Object entry = list.get(0);
@@ -1571,7 +1546,7 @@ public class Services implements StructrServices, BroadcastReceiver {
 				if (error != null) {
 
 					// consume error stream
-					IOUtils.toString(error, "utf-8");
+					IOUtils.toString(error, StandardCharsets.UTF_8);
 				}
 
 				http.disconnect();
@@ -1626,14 +1601,14 @@ public class Services implements StructrServices, BroadcastReceiver {
 				if (input != null) {
 
 					// consume response
-					IOUtils.toString(input, "utf-8");
+					IOUtils.toString(input, StandardCharsets.UTF_8);
 				}
 
 				final InputStream error = http.getErrorStream();
 				if (error != null) {
 
 					// consume error stream
-					IOUtils.toString(error, "utf-8");
+					IOUtils.toString(error, StandardCharsets.UTF_8);
 				}
 
 				http.disconnect();
