@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2010-2024 Structr GmbH
+ * Copyright (C) 2010-2025 Structr GmbH
  *
  * This file is part of Structr <http://structr.org>.
  *
@@ -30,12 +30,8 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Map.Entry;
 
-//~--- classes ----------------------------------------------------------------
-
 /**
  * Controls deserialization of property sets.
- *
- *
  */
 public class JsonInputGSONAdapter implements InstanceCreator<IJsonInput>, JsonSerializer<IJsonInput>, JsonDeserializer<IJsonInput> {
 
@@ -45,9 +41,9 @@ public class JsonInputGSONAdapter implements InstanceCreator<IJsonInput>, JsonSe
 	public IJsonInput createInstance(final Type type) {
 
 		try {
-			return (IJsonInput)type.getClass().newInstance();
+			return (IJsonInput)type.getClass().getDeclaredConstructor().newInstance();
 
-		} catch (InstantiationException | IllegalAccessException e) {
+		} catch (Throwable e) {
 			logger.warn("", e);
 		}
 
