@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2010-2024 Structr GmbH
+ * Copyright (C) 2010-2025 Structr GmbH
  *
  * This file is part of Structr <http://structr.org>.
  *
@@ -20,31 +20,31 @@ package org.structr.web.function;
 
 import org.structr.api.config.Settings;
 import org.structr.api.util.PagingIterable;
+import org.structr.common.PropertyView;
 import org.structr.common.SecurityContext;
 import org.structr.core.GraphObject;
 import org.structr.core.GraphObjectMap;
-import org.structr.core.StaticValue;
-import org.structr.core.Value;
+import org.structr.docs.Signature;
+import org.structr.docs.Usage;
+import org.structr.docs.Example;
+import org.structr.docs.Parameter;
 import org.structr.rest.serialization.StreamingJsonWriter;
 import org.structr.schema.action.ActionContext;
 
 import java.io.StringWriter;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
 
 public class ToJsonFunction extends UiCommunityFunction {
 
-	public static final String ERROR_MESSAGE_TO_JSON    = "Usage: ${to_json(obj [, view[, depth = 3[, serializeNulls = true ]]])}. Example: ${to_json(this, 'public', 4)}";
-	public static final String ERROR_MESSAGE_TO_JSON_JS = "Usage: ${{Structr.to_json(obj [, view[, depth = 3[, serializeNulls = true ]]])}}. Example: ${{Structr.to_json(Structr.get('this'), 'public', 4)}}";
-
 	@Override
 	public String getName() {
-		return "to_json";
+		return "toJson";
 	}
 
 	@Override
-	public String getSignature() {
-		return "obj [, view, depth = 3, serializeNulls = true ]";
+	public List<Signature> getSignatures() {
+		return Signature.forAllScriptingLanguages("obj [, view, depth = 3, serializeNulls = true ]");
 	}
 
 	@Override
@@ -57,54 +57,57 @@ public class ToJsonFunction extends UiCommunityFunction {
 				final SecurityContext securityContext = ctx.getSecurityContext();
 				final StringWriter writer             = new StringWriter();
 
-				final Value<String> view = new StaticValue<>("public");
-				if (sources.length > 1) {
+				final String view            = (sources.length > 1) ? sources[1].toString() : PropertyView.Public;
+				final int outputDepth        = (sources.length > 2 && sources[2] instanceof Number) ? ((Number)sources[2]).intValue() : Settings.RestOutputDepth.getValue();
+				final boolean serializeNulls = (sources.length > 3 && sources[3] instanceof Boolean) ? ((Boolean)sources[3]) : true;
 
-					view.set(securityContext, sources[1].toString());
-				}
+				final boolean returnRawResultWasEnabled = securityContext.returnRawResult();
 
-				int outputDepth = Settings.RestOutputDepth.getValue();
-				if (sources.length > 2 && sources[2] instanceof Number) {
-					outputDepth = ((Number)sources[2]).intValue();
-				}
-
-				boolean serializeNulls = true;
-				if (sources.length > 3 && sources[3] instanceof Boolean) {
-					serializeNulls = ((Boolean)sources[3]);
-				}
+				// prevent "result" wrapper from being introduced
+				securityContext.enableReturnRawResult();
 
 				final Object obj = sources[0];
 
 				if (obj instanceof GraphObject) {
 
-					final StreamingJsonWriter jsonStreamer = new StreamingJsonWriter(view, true, outputDepth, false, serializeNulls);
+					final StreamingJsonWriter jsonStreamer = new StreamingJsonWriter(view, Settings.JsonIndentation.getValue(), outputDepth, false, serializeNulls);
 
 					jsonStreamer.streamSingle(securityContext, writer, (GraphObject)obj);
 
-				} else if (obj instanceof Iterable) {
+				} else if (obj instanceof Iterable list) {
 
-					final StreamingJsonWriter jsonStreamer = new StreamingJsonWriter(view, true, outputDepth, true, serializeNulls);
-					final Iterable list                    = (Iterable)obj;
+					final StreamingJsonWriter jsonStreamer = new StreamingJsonWriter(view, Settings.JsonIndentation.getValue(), outputDepth, true, serializeNulls);
 
 					jsonStreamer.stream(securityContext, writer, new PagingIterable<>("toJson()", list), null, false);
 
 				} else if (obj instanceof Map) {
 
-					final StreamingJsonWriter jsonStreamer = new StreamingJsonWriter(view, true, outputDepth, false, serializeNulls);
+					final StreamingJsonWriter jsonStreamer = new StreamingJsonWriter(view, Settings.JsonIndentation.getValue(), outputDepth, false, serializeNulls);
 					final GraphObjectMap map               = new GraphObjectMap();
 
 					UiFunction.recursivelyConvertMapToGraphObjectMap(map, (Map)obj, outputDepth);
 
-					jsonStreamer.stream(securityContext, writer, new PagingIterable<>("toJson()", Arrays.asList(map)), null, false);
+					jsonStreamer.stream(securityContext, writer, new PagingIterable<>("toJson()", List.of(map)), null, false);
+
+				} else if (obj instanceof String) {
+
+					return "\"" + ((String) obj).replaceAll("\"", "\\\\\"") + "\"";
+
+				} else if (obj instanceof Number) {
+
+					return obj;
+
+				}
+
+				if (Boolean.FALSE.equals(returnRawResultWasEnabled)) {
+					securityContext.disableReturnRawResult();
 				}
 
 				return writer.getBuffer().toString();
 
-
 			} catch (Throwable t) {
 
 				logException(caller, t, sources);
-
 			}
 
 			return "";
@@ -112,21 +115,59 @@ public class ToJsonFunction extends UiCommunityFunction {
 		} else {
 
 			logParameterError(caller, sources, ctx.isJavaScriptContext());
-
 		}
 
 		return usage(ctx.isJavaScriptContext());
-
 	}
 
 	@Override
-	public String usage(boolean inJavaScriptContext) {
-		return (inJavaScriptContext ? ERROR_MESSAGE_TO_JSON_JS : ERROR_MESSAGE_TO_JSON);
+	public List<Usage> getUsages() {
+		return List.of(
+				Usage.structrScript("Usage: ${toJson(obj [, view[, depth = 3[, serializeNulls = true ]]])}."),
+				Usage.javaScript("Usage: ${{$.toJson(obj [, view[, depth = 3[, serializeNulls = true ]]])}}.")
+		);
 	}
 
 	@Override
-	public String shortDescription() {
-		return "Serializes the given entity to JSON";
+	public String getShortDescription() {
+		return "Serializes the given object to JSON.";
 	}
+
+	@Override
+	public String getLongDescription() {
+		return """
+		Returns a JSON string representation of the given object very similar to `JSON.stringify()` in JavaScript.
+		The output of this method will be very similar to the output of the REST server except for the response 
+		headers and the result container. The optional `view` parameter can be used to select the view representation 
+		of the entity. If no view is given, the `public` view is used. The optional `depth` parameter defines 
+		at which depth the JSON serialization stops. If no depth is given, the default value of 3 is used.
+		""";
+	}
+
+	@Override
+	public List<Example> getExamples() {
+		return List.of(
+				Example.structrScript("${ toJson(find('MyData'), 'public', 4) }"),
+				Example.javaScript("${{$.toJson($.this, 'public', 4)}}")
+		);
+	}
+
+	@Override
+	public List<Parameter> getParameters() {
+		return List.of(
+				Parameter.mandatory("source", "object or collection"),
+				Parameter.optional("view", "view (default: `public`)"),
+				Parameter.optional("depth", "conversion depth (default: 3)"),
+				Parameter.optional("serializeNulls", "nulled keep properties (default: true)")
+		);
+	}
+
+	@Override
+	public List<String> getNotes() {
+		return List.of(
+				"For database objects this method is preferrable to `JSON.stringify()` because a view can be chosen. `JSON.stringify()` will only return the `id` and `type` property for nodes."
+		);
+	}
+
 
 }
