@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2010-2024 Structr GmbH
+ * Copyright (C) 2010-2025 Structr GmbH
  *
  * This file is part of Structr <http://structr.org>.
  *
@@ -18,13 +18,9 @@
  */
 package org.structr.web.servlet;
 
-import jakarta.servlet.AsyncContext;
-import jakarta.servlet.ServletException;
-import jakarta.servlet.ServletOutputStream;
-import jakarta.servlet.WriteListener;
+import jakarta.servlet.*;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-import org.apache.commons.collections.CollectionUtils;
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.exception.ExceptionUtils;
@@ -36,48 +32,61 @@ import org.slf4j.LoggerFactory;
 import org.structr.api.config.Settings;
 import org.structr.api.util.Iterables;
 import org.structr.common.AccessMode;
-import org.structr.common.PathHelper;
 import org.structr.common.SecurityContext;
 import org.structr.common.error.FrameworkException;
 import org.structr.common.event.RuntimeEventLog;
-import org.structr.core.GraphObject;
+import org.structr.common.helper.PathHelper;
 import org.structr.core.Services;
+import org.structr.core.api.AbstractMethod;
+import org.structr.core.api.Methods;
+import org.structr.core.api.NamedArguments;
 import org.structr.core.app.App;
 import org.structr.core.app.Query;
+import org.structr.core.app.QueryGroup;
 import org.structr.core.app.StructrApp;
 import org.structr.core.auth.Authenticator;
 import org.structr.core.auth.exception.AuthenticationException;
+import org.structr.core.auth.exception.OAuthException;
 import org.structr.core.converter.PropertyConverter;
-import org.structr.core.entity.AbstractNode;
 import org.structr.core.entity.Principal;
 import org.structr.core.graph.NodeInterface;
 import org.structr.core.graph.Tx;
+import org.structr.core.property.Property;
 import org.structr.core.property.PropertyKey;
-import org.structr.core.property.PropertyMap;
+import org.structr.core.property.StringProperty;
 import org.structr.core.script.Scripting;
-import org.structr.storage.StorageProviderFactory;
+import org.structr.core.traits.StructrTraits;
+import org.structr.core.traits.Traits;
+import org.structr.core.traits.definitions.GraphObjectTraitDefinition;
+import org.structr.core.traits.definitions.NodeInterfaceTraitDefinition;
+import org.structr.core.traits.definitions.UserTraitDefinition;
 import org.structr.rest.auth.AuthHelper;
 import org.structr.rest.service.HttpServiceServlet;
 import org.structr.rest.service.StructrHttpServiceConfig;
 import org.structr.rest.servlet.AbstractServletBase;
-import org.structr.schema.ConfigurationProvider;
 import org.structr.schema.action.ActionContext;
 import org.structr.schema.action.EvaluationHints;
+import org.structr.storage.StorageProviderFactory;
 import org.structr.util.Base64;
 import org.structr.web.auth.UiAuthenticator;
 import org.structr.web.common.FileHelper;
+import org.structr.web.common.PagePaths;
 import org.structr.web.common.RenderContext;
 import org.structr.web.common.RenderContext.EditMode;
 import org.structr.web.common.StringRenderBuffer;
-import org.structr.web.entity.*;
-import org.structr.web.entity.dom.DOMElement;
+import org.structr.web.entity.File;
+import org.structr.web.entity.Linkable;
+import org.structr.web.entity.Site;
 import org.structr.web.entity.dom.DOMNode;
 import org.structr.web.entity.dom.Page;
+import org.structr.web.traits.definitions.AbstractFileTraitDefinition;
+import org.structr.web.traits.definitions.LinkableTraitDefinition;
+import org.structr.web.traits.definitions.dom.PageTraitDefinition;
 
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.URI;
-import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 import java.text.DateFormat;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
@@ -93,11 +102,11 @@ import java.util.regex.Pattern;
  */
 public class HtmlServlet extends AbstractServletBase implements HttpServiceServlet {
 
-	private static final Logger logger = LoggerFactory.getLogger(HtmlServlet.class.getName());
+	private static final Logger logger                             = LoggerFactory.getLogger(HtmlServlet.class.getName());
+	private static final Property<String> pathPropertyForSearch    = new StringProperty("path").indexed();
 
 	public static final String CONFIRM_REGISTRATION_PAGE = "/confirm_registration";
 	public static final String RESET_PASSWORD_PAGE       = "/reset-password";
-	public static final String POSSIBLE_ENTRY_POINTS_KEY = "possibleEntryPoints";
 	public static final String DOWNLOAD_AS_FILENAME_KEY  = "filename";
 	public static final String RANGE_KEY                 = "range";
 	public static final String DOWNLOAD_AS_DATA_URL_KEY  = "as-data-url";
@@ -109,7 +118,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 	private static final ExecutorService threadPool                   = Executors.newCachedThreadPool();
 	private final Pattern FilenameCleanerPattern                      = Pattern.compile("[\n\r]", Pattern.CASE_INSENSITIVE | Pattern.MULTILINE | Pattern.DOTALL);
 	private final StructrHttpServiceConfig config                     = new StructrHttpServiceConfig();
-	private final Set<String> possiblePropertyNamesForEntityResolving = new LinkedHashSet<>();
+	private final Set<String> possiblePropertyNamesForEntityResolving = new HashSet<>();
 
 	private boolean isAsync = false;
 
@@ -142,9 +151,12 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 	@Override
 	protected void doGet(final HttpServletRequest request, final HttpServletResponse response) {
 
-		final long t0                   = System.currentTimeMillis();
-		final Authenticator auth        = getConfig().getAuthenticator();
-		boolean requestUriContainsUuids = false;
+		this.stats.recordStatsValue("http", "get", System.currentTimeMillis(), false);
+
+		final long t0                                   = System.currentTimeMillis();
+		final Authenticator auth                        = getConfig().getAuthenticator();
+		final Traits pageTraits                         = Traits.of(StructrTraits.PAGE);
+		boolean requestUriContainsUuids                 = false;
 
 		SecurityContext securityContext;
 		final App app;
@@ -170,6 +182,8 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 			// isolate request authentication in a transaction
 			try (final Tx tx = StructrApp.getInstance().tx()) {
 
+				tx.prefetchHint("HTTP GET auth " + path);
+
 				securityContext = auth.initializeAndExamineRequest(request, response);
 				tx.success();
 
@@ -177,11 +191,24 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 				response.sendError(HttpServletResponse.SC_UNAUTHORIZED);
 				return;
+
+			} catch (final OAuthException oae) {
+
+				response.setStatus(oae.getStatus());
+
+				securityContext = SecurityContext.getInstance(null, request, AccessMode.Frontend);
+
+				if (!oae.isSilent()) {
+
+					logger.error("{}", oae.getMessage());
+				}
 			}
 
 			app = StructrApp.getInstance(securityContext);
 
 			try (final Tx tx = app.tx()) {
+
+				tx.prefetchHint("HTTP GET " + path);
 
 				// Ensure access mode is frontend
 				securityContext.setAccessMode(AccessMode.Frontend);
@@ -207,82 +234,103 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 					// Don't cache if a user is logged in
 					dontCache = true;
-
 				}
 
 				RuntimeEventLog.http(path, user);
 
 				final RenderContext renderContext = RenderContext.getInstance(securityContext, request, response);
+				final EditMode edit               = renderContext.getEditMode(user);
+				final String[] uriParts           = PathHelper.getParts(path);
+				DOMNode rootElement               = null;
+				NodeInterface dataNode            = null;
+				File file                         = null;
 
-				renderContext.setResourceProvider(config.getResourceProvider());
+				if (response.getStatus() != HttpServletResponse.SC_OK) {
 
-				final EditMode edit = renderContext.getEditMode(user);
-
-				DOMNode rootElement = null;
-				AbstractNode dataNode = null;
-
-				final String[] uriParts = PathHelper.getParts(path);
-
-				if (uriParts == null) {
-					logger.error("URI parts array is null, shouldn't happen.");
-					throw new FrameworkException(500, "URI parts array is null, shouldn't happen.");
-				}
-
-				if (uriParts.length == 0) {
-
-					logger.debug("No path supplied, trying to find index page");
-
-					// find a visible page
-					rootElement = findIndexPage(securityContext, edit);
-
-				} else {
-
-					// special optimization for UUID-addressed partials
-					if (uriParts.length == 1 && Settings.isValidUuid(uriParts[0])) {
-
-						final AbstractNode node = findNodeByUuid(securityContext, uriParts[0]);
-						if (node != null && node instanceof DOMElement) {
-
-							rootElement = (DOMElement) node;
-
-							renderContext.setIsPartialRendering(true);
-						}
-					}
+					// response already has non-200 status. checking for existing error pages
+					rootElement = getErrorPageForStatus(response, securityContext);
 
 					if (rootElement == null) {
 
-						rootElement = findPage(securityContext, path, edit);
-
-						// special case where path is defined as "/custom/path" and request URI is "/custom/path/"
-						if (rootElement == null && path.endsWith("/")) {
-							rootElement = findPage(securityContext, path.substring(0, path.length() - 1), edit);
-						}
-
-					} else {
-
-						dontCache = true;
+						// did not find error page and the status was already set -> send the error response
+						tx.success();
+						return;
 					}
 				}
 
-				File file = null;
+				if (rootElement == null && file == null) {
 
-				if (rootElement == null) { // No page found
+					if (uriParts == null) {
+						logger.error("URI parts array is null, shouldn't happen.");
+						throw new FrameworkException(500, "URI parts array is null, shouldn't happen.");
+					}
+
+					if (uriParts.length == 0) {
+
+						logger.debug("No path supplied, trying to find index page");
+
+						// find a visible page
+						rootElement = findIndexPage(securityContext, edit);
+
+					} else {
+
+						// special optimization for UUID-addressed partials
+						if (uriParts.length == 1 && Settings.isValidUuid(uriParts[0])) {
+
+							final NodeInterface node = findNodeByUuid(securityContext, uriParts[0]);
+							if (node != null && node.is(StructrTraits.DOM_NODE)) {
+
+								rootElement = node.as(DOMNode.class);
+
+								renderContext.setIsPartialRendering(true);
+							}
+						}
+
+						if (rootElement == null) {
+
+							// check dynamic paths
+							final DOMNode pathResult = PagePaths.findPageAndResolveParameters(renderContext, path);
+							if (pathResult != null) {
+
+								rootElement   = pathResult;
+							}
+
+						}
+
+						if (rootElement == null) {
+
+							rootElement = findPage(securityContext, path, edit);
+
+							// special case where path is defined as "/custom/path" and request URI is "/custom/path/"
+							if (rootElement == null && path.endsWith("/")) {
+								rootElement = findPage(securityContext, path.substring(0, path.length() - 1), edit);
+							}
+
+						} else {
+
+							dontCache = true;
+						}
+					}
+				}
+
+
+				if (rootElement == null && file == null) { // No page found
 
 					// In case of a file, try to find a file with the query string in the filename
 					final String queryString = request.getQueryString();
-
-					// Look for a file, first include the query string
 					if (StringUtils.isNotBlank(queryString)) {
+
+						// Look for a file, first include the query string
 						file = findFile(securityContext, request, path + "?" + queryString);
 					}
 
 					// If no file with query string in the file name found, try without query string
 					if (file == null) {
+
 						file = findFile(securityContext, request, path);
 					}
 
 					if (file == null) {
-
 
 						for (int i = 0; i < uriParts.length; i++) {
 
@@ -308,10 +356,10 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 							} else {
 
-								final AbstractNode possibleRootNode = findNodeByUuid(securityContext, PathHelper.getName(path));
+								final NodeInterface possibleRootNode = findNodeByUuid(securityContext, PathHelper.getName(path));
 
-								if (possibleRootNode instanceof DOMNode) {
-									rootElement = (DOMNode) possibleRootNode;
+								if (possibleRootNode != null && possibleRootNode.is(StructrTraits.DOM_NODE)) {
+									rootElement = possibleRootNode.as(DOMNode.class);
 								}
 							}
 
@@ -323,12 +371,12 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 							if (rootElement == null) {
 
-								final AbstractNode possibleRootNode = findNodeByUuid(securityContext, PathHelper.getName(pagePart));
+								final NodeInterface possibleRootNode = findNodeByUuid(securityContext, PathHelper.getName(pagePart));
 
 								// check visibleForSite here as well
-								if (possibleRootNode instanceof DOMNode && (!(possibleRootNode instanceof Page) || isVisibleForSite(request, (Page)possibleRootNode))) {
+								if (possibleRootNode != null && possibleRootNode.is(StructrTraits.DOM_NODE) && (!(possibleRootNode.is(StructrTraits.PAGE)) || isVisibleForSite(request, possibleRootNode.as(Page.class)))) {
 
-									rootElement = ((DOMNode) possibleRootNode);
+									rootElement = possibleRootNode.as(DOMNode.class);
 								}
 
 								if (rootElement == null) {
@@ -339,7 +387,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 								dataNode = findNodeByUuid(securityContext, PathHelper.getName(path));
 
 								if (dataNode == null) {
-									dataNode = findFirstNodeByName(securityContext, request, path);
+									dataNode = findFirstNodeByName(securityContext, path);
 								}
 
 								renderContext.setDetailsDataObject(dataNode);
@@ -352,7 +400,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 								} else {
 
-									dataNode = findFirstNodeByName(securityContext, request, path);
+									dataNode = findFirstNodeByName(securityContext, path);
 								}
 
 								renderContext.setDetailsDataObject(dataNode);
@@ -373,15 +421,15 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 						case Authenticated:
 
 							final Linkable result = authResult.getRootElement();
-							if (result instanceof Page) {
+							if (result.is(StructrTraits.PAGE)) {
 
-								rootElement = (DOMNode)result;
+								rootElement = result.as(DOMNode.class);
 								securityContext = authResult.getSecurityContext();
 								renderContext.pushSecurityContext(securityContext);
 
-							} else if (result instanceof File) {
+							} else if (result.is(StructrTraits.FILE)) {
 
-								streamFile(authResult.getSecurityContext(), (File)result, request, response, EditMode.NONE, true);
+								streamFile(authResult.getSecurityContext(), result.as(File.class), request, response, EditMode.NONE, true);
 								tx.success();
 								return;
 
@@ -391,11 +439,11 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 						// Page with Basic Auth found but not yet authenticated
 						case MustAuthenticate:
 
-							final Page errorPage = StructrApp.getInstance().nodeQuery(Page.class).and(StructrApp.key(Page.class, "showOnErrorCodes"), "401", false).getFirst();
-							if (errorPage != null && isVisibleForSite(request, errorPage)) {
+							final NodeInterface errorPage = StructrApp.getInstance().nodeQuery(StructrTraits.PAGE).key(pageTraits.key(PageTraitDefinition.SHOW_ON_ERROR_CODES_PROPERTY), "401", false).getFirst();
+							if (errorPage != null && isVisibleForSite(request, errorPage.as(Page.class))) {
 
 								// set error page
-								rootElement = errorPage;
+								rootElement = errorPage.as(Page.class);
 
 								// don't cache the error page
 								dontCache = true;
@@ -421,6 +469,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 					streamFile(securityContext, file, request, response, edit, true);
 					tx.success();
+
 					return;
 				}
 
@@ -473,24 +522,11 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 						// prepare response
 						response.setCharacterEncoding("UTF-8");
-
-						String contentType = rootElement.getProperty(StructrApp.key(Page.class, "contentType"));
-
-						if (contentType == null) {
-
-							// Default
-							contentType = "text/html;charset=UTF-8";
-						}
-
-						if (contentType.equals("text/html")) {
-							contentType = contentType.concat(";charset=UTF-8");
-						}
-
-						response.setContentType(contentType);
+						response.setContentType(getContentTypeOrDefault(rootElement));
 
 						setCustomResponseHeaders(response);
 
-						final boolean createsRawData = rootElement.getProperty(StructrApp.key(Page.class, "pageCreatesRawData"));
+						final boolean createsRawData = rootElement.is(StructrTraits.PAGE) && rootElement.as(Page.class).pageCreatesRawData();
 
 						// async or not?
 						if (isAsync && !createsRawData) {
@@ -543,11 +579,15 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 	@Override
 	protected void doPost(final HttpServletRequest request, final HttpServletResponse response) throws ServletException, IOException {
 
+		this.stats.recordStatsValue("http", "post", System.currentTimeMillis(), false);
+
 		doGet(request, response);
 	}
 
 	@Override
 	protected void doHead(final HttpServletRequest request, final HttpServletResponse response) {
+
+		this.stats.recordStatsValue("http", "head", System.currentTimeMillis(), false);
 
 		final Authenticator auth        = getConfig().getAuthenticator();
 		SecurityContext securityContext = null;
@@ -561,6 +601,9 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 			// isolate request authentication in a transaction
 			try (final Tx tx = StructrApp.getInstance().tx()) {
+
+				tx.prefetchHint("HTTP POST auth " + path);
+
 				securityContext = auth.initializeAndExamineRequest(request, response);
 				tx.success();
 			}
@@ -568,6 +611,8 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 			final App app = StructrApp.getInstance(securityContext);
 
 			try (final Tx tx = app.tx()) {
+
+				tx.prefetchHint("HTTP POST " + path);
 
 				// Ensure access mode is frontend
 				securityContext.setAccessMode(AccessMode.Frontend);
@@ -598,13 +643,10 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 				}
 
 				final RenderContext renderContext = RenderContext.getInstance(securityContext, request, response);
+				final EditMode edit               = renderContext.getEditMode(user);
 
-				renderContext.setResourceProvider(config.getResourceProvider());
-
-				final EditMode edit = renderContext.getEditMode(user);
-
-				DOMNode rootElement   = null;
-				AbstractNode dataNode = null;
+				DOMNode rootElement    = null;
+				NodeInterface dataNode = null;
 
 				String[] uriParts = PathHelper.getParts(path);
 				if ((uriParts == null) || (uriParts.length == 0)) {
@@ -616,13 +658,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 				} else {
 
-					if (rootElement == null) {
-
-						rootElement = findPage(securityContext, path, edit);
-
-					} else {
-						dontCache = true;
-					}
+					rootElement = findPage(securityContext, path, edit);
 				}
 
 				if (rootElement == null) { // No page found
@@ -653,7 +689,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 					if (!requestUriContainsUuids) {
 
 						// Try to find a data node by name
-						dataNode = findFirstNodeByName(securityContext, request, path);
+						dataNode = findFirstNodeByName(securityContext, path);
 
 					} else {
 
@@ -661,21 +697,16 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 					}
 
-					if (dataNode != null && !(dataNode instanceof Linkable)) {
-
-						// Last path part matches a data node
-						// Remove last path part and try again searching for a page
-						// clear possible entry points
-						request.removeAttribute(POSSIBLE_ENTRY_POINTS_KEY);
+					if (dataNode != null && !(dataNode.is(StructrTraits.LINKABLE))) {
 
 						rootElement = findPage(securityContext, StringUtils.substringBeforeLast(path, PathHelper.PATH_SEP), edit);
 
 						renderContext.setDetailsDataObject(dataNode);
 
 						// Start rendering on data node
-						if (rootElement == null && dataNode instanceof DOMNode) {
+						if (rootElement == null && dataNode.is(StructrTraits.DOM_NODE)) {
 
-							rootElement = ((DOMNode) dataNode);
+							rootElement = dataNode.as(DOMNode.class);
 
 						}
 
@@ -693,14 +724,14 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 						// Element with Basic Auth found and authentication succeeded
 						case Authenticated:
 							final Linkable result = authResult.getRootElement();
-							if (result instanceof Page) {
+							if (result.is(StructrTraits.PAGE)) {
 
-								rootElement = (DOMNode)result;
+								rootElement = result.as(Page.class);
 								renderContext.pushSecurityContext(authResult.getSecurityContext());
 
-							} else if (result instanceof File) {
+							} else if (result.is(StructrTraits.FILE)) {
 
-								//streamFile(authResult.getSecurityContext(), (File)result, request, response, EditMode.NONE);
+								streamFile(authResult.getSecurityContext(), result.as(File.class), request, response, EditMode.NONE, true);
 								tx.success();
 								return;
 
@@ -776,20 +807,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 						// prepare response
 						response.setCharacterEncoding("UTF-8");
-
-						String contentType = rootElement.getProperty(StructrApp.key(Page.class, "contentType"));
-
-						if (contentType == null) {
-
-							// Default
-							contentType = "text/html;charset=UTF-8";
-						}
-
-						if (contentType.equals("text/html")) {
-							contentType = contentType.concat(";charset=UTF-8");
-						}
-
-						response.setContentType(contentType);
+						response.setContentType(getContentTypeOrDefault(rootElement));
 
 						setCustomResponseHeaders(response);
 					}
@@ -814,6 +832,8 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 	@Override
 	protected void doOptions(final HttpServletRequest request, final HttpServletResponse response) {
+
+		this.stats.recordStatsValue("http", "options", System.currentTimeMillis(), false);
 
 		final Authenticator auth = config.getAuthenticator();
 
@@ -849,7 +869,15 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 			@Override
 			public void run() {
 
+				String name = "unknown";
+
 				try (final Tx tx = app.tx()) {
+
+					DOMNode.prefetchDOMNodes(rootNode.getUuid());
+
+					name = rootNode.getName();
+
+					tx.prefetchHint("Render page " + name);
 
 					// render
 					rootNode.render(renderContext, 0);
@@ -859,7 +887,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 				} catch (Throwable t) {
 
-					logger.warn("Error while rendering page {}: {}", rootNode.getName(), t.getMessage());
+					logger.warn("Error while rendering page {}: {}", name, t.getMessage());
 					logger.warn(ExceptionUtils.getStackTrace(t));
 
 					try {
@@ -873,7 +901,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 				}
 
 				// record async rendering time
-				HtmlServlet.super.stats.recordStatsValue("html", rootElement.getName(), System.currentTimeMillis() - requestStartTime);
+				HtmlServlet.super.stats.recordStatsValue("html", name, System.currentTimeMillis() - requestStartTime);
 			}
 
 		});
@@ -914,7 +942,6 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 					}
 
 				} catch (EofException ee) {
-
 					// ignore EofException which (by jettys standards) should be handled less verbosely
 
 				} catch (IOException | InterruptedException t) {
@@ -927,17 +954,14 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 				// prevent async from running into default timeout of 30s
 				async.complete();
+				finished.set(true);
 
 				if (t instanceof QuietException || t.getCause() instanceof QuietException) {
 					// ignore exceptions which (by jettys standards) should be handled less verbosely
 				} else {
 
-					final SecurityContext sc = renderContext.getSecurityContext();
-					final Principal user     = sc.getUser(false);
-					final String username    = (user != null) ? user.getName() : "anonymous";
-
 					logger.warn("Could not flush the response body content to the client, probably because the network connection was terminated.");
-					logger.warn(" -> From: {} | URI: {} | Query: {} | User: {}", request.getRemoteAddr(), request.getRequestURI(), request.getQueryString(), username);
+					logger.warn(" -> From: {} | URI: {} | Query: {}", request.getRemoteAddr(), request.getRequestURI(), request.getQueryString());
 				}
 			}
 		});
@@ -945,7 +969,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 	protected void writeOutputStream(HttpServletResponse response, StringRenderBuffer buffer) throws IOException {
 
-		response.getOutputStream().write(buffer.getBuffer().toString().getBytes("utf-8"));
+		response.getOutputStream().write(buffer.getBuffer().toString().getBytes(StandardCharsets.UTF_8));
 		response.getOutputStream().flush();
 		response.getOutputStream().close();
 	}
@@ -964,9 +988,12 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 	 */
 	private Page notFound(final HttpServletResponse response, final SecurityContext securityContext) throws IOException, FrameworkException {
 
-		final List<Page> errorPages = StructrApp.getInstance(securityContext).nodeQuery(Page.class).and(StructrApp.key(Page.class, "showOnErrorCodes"), "404", false).getAsList();
+		final PropertyKey<String> key        = Traits.of(StructrTraits.PAGE).key(PageTraitDefinition.SHOW_ON_ERROR_CODES_PROPERTY);
+		final List<NodeInterface> errorPages = StructrApp.getInstance(securityContext).nodeQuery(StructrTraits.PAGE).key(key, "404", false).getAsList();
 
-		for (final Page errorPage : errorPages) {
+		for (final NodeInterface node : errorPages) {
+
+			final Page errorPage = node.as(Page.class);
 
 			if (isVisibleForSite(securityContext.getRequest(), errorPage)) {
 
@@ -981,16 +1008,35 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 		return null;
 	}
 
+	private Page getErrorPageForStatus(final HttpServletResponse response, final SecurityContext securityContext) throws IOException, FrameworkException {
+
+		final PropertyKey<String> key        = Traits.of(StructrTraits.PAGE).key(PageTraitDefinition.SHOW_ON_ERROR_CODES_PROPERTY);
+		final List<NodeInterface> errorPages = StructrApp.getInstance(securityContext).nodeQuery(StructrTraits.PAGE).key(key, "" + response.getStatus(), false).getAsList();
+
+		for (final NodeInterface node : errorPages) {
+
+			final Page errorPage = node.as(Page.class);
+
+			if (isVisibleForSite(securityContext.getRequest(), errorPage)) {
+
+				return errorPage;
+			}
+		}
+
+		response.sendError(response.getStatus());
+
+		return null;
+	}
+
 	/**
 	 * Find first node whose name matches the last part of the given path
 	 *
 	 * @param securityContext
-	 * @param request
 	 * @param path
 	 * @return node
 	 * @throws FrameworkException
 	 */
-	private AbstractNode findFirstNodeByName(final SecurityContext securityContext, final HttpServletRequest request, final String path) throws FrameworkException {
+	private NodeInterface findFirstNodeByName(final SecurityContext securityContext, final String path) throws FrameworkException {
 
 		final String name = PathHelper.getName(path);
 
@@ -998,23 +1044,17 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 			logger.debug("Requested name: {}", name);
 
-			final Query query                  = StructrApp.getInstance(securityContext).nodeQuery();
-			final ConfigurationProvider config = StructrApp.getConfiguration();
+			final Query<NodeInterface> query = StructrApp.getInstance(securityContext).nodeQuery(StructrTraits.NODE_INTERFACE);
 
 			if (!possiblePropertyNamesForEntityResolving.isEmpty()) {
 
-				query.and();
-				resolvePossiblePropertyNamesForObjectResolution(config, query, name);
-				query.parent();
+				// FIXME: default is and so we don't need the additional and() here?
+				//query.and();
+				resolvePossiblePropertyNamesForObjectResolution(query, name);
+				//query.parent();
 			}
 
-
-			final List<AbstractNode> results = query.getAsList();
-
-			logger.debug("{} results", results.size());
-			request.setAttribute(POSSIBLE_ENTRY_POINTS_KEY, results);
-
-			return (results.size() > 0 ? (AbstractNode) results.get(0) : null);
+			return query.getFirst();
 		}
 
 		return null;
@@ -1028,13 +1068,13 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 	 * @return node
 	 * @throws FrameworkException
 	 */
-	private AbstractNode findNodeByUuid(final SecurityContext securityContext, final String uuid) throws FrameworkException {
+	private NodeInterface findNodeByUuid(final SecurityContext securityContext, final String uuid) throws FrameworkException {
 
 		if (!uuid.isEmpty()) {
 
 			logger.debug("Requested id: {}", uuid);
 
-			return (AbstractNode) StructrApp.getInstance(securityContext).getNodeById(uuid);
+			return StructrApp.getInstance(securityContext).getNodeById(uuid);
 		}
 
 		return null;
@@ -1051,21 +1091,24 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 	 */
 	private File findFile(final SecurityContext securityContext, final HttpServletRequest request, final String path) throws FrameworkException {
 
-		List<Linkable> entryPoints = findPossibleEntryPoints(securityContext, request, path);
+		List<Linkable> entryPoints = findFiles(securityContext, request, path);
 
 		// If no results were found, try to replace whitespace by '+' or '%20'
 		if (entryPoints.isEmpty()) {
-			entryPoints = findPossibleEntryPoints(securityContext, request, PathHelper.replaceWhitespaceByPlus(path));
+			entryPoints = findFiles(securityContext, request, PathHelper.replaceWhitespaceByPlus(path));
 		}
 
 		if (entryPoints.isEmpty()) {
-			entryPoints = findPossibleEntryPoints(securityContext, request, PathHelper.replaceWhitespaceByPercentTwenty(path));
+			entryPoints = findFiles(securityContext, request, PathHelper.replaceWhitespaceByPercentTwenty(path));
 		}
 
 		for (Linkable node : entryPoints) {
 
-			if (node instanceof File && (path.equals(node.getPath()) || node.getUuid().equals(PathHelper.getName(path)))) {
-				return (File) node;
+			// prefetch file data
+			FileHelper.prefetchFileData(node.getUuid());
+
+			if (node.is(StructrTraits.FILE) && (path.equals(node.getPath()) || node.getUuid().equals(PathHelper.getName(path)))) {
+				return node.as(File.class);
 			}
 		}
 
@@ -1082,7 +1125,9 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 	 */
 	private DOMNode findPartialByName(final SecurityContext securityContext, final String name) throws FrameworkException {
 
-		for (final DOMNode potentialPartial : StructrApp.getInstance(securityContext).nodeQuery(DOMNode.class).andName(name).not().and(DOMNode.type, "Page").getAsList()) {
+		for (final NodeInterface node : StructrApp.getInstance(securityContext).nodeQuery(StructrTraits.DOM_NODE).name(name).not().key(Traits.of(StructrTraits.GRAPH_OBJECT).key(GraphObjectTraitDefinition.TYPE_PROPERTY), StructrTraits.PAGE).getAsList()) {
+
+			final DOMNode potentialPartial = node.as(DOMNode.class);
 
 			if (potentialPartial.getOwnerDocumentAsSuperUser() != null) {
 				return potentialPartial;
@@ -1105,42 +1150,40 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 	 */
 	private Page findPage(final SecurityContext securityContext, final String path, final EditMode edit) throws FrameworkException {
 
-		final PropertyKey<String> pathKey = StructrApp.key(Page.class, "path");
-		final PropertyKey<String> nameKey = StructrApp.key(Page.class, "name");
-
-		final PropertyMap attributes = new PropertyMap(pathKey, path);
-		final String name = PathHelper.getName(path);
-		attributes.put(nameKey, name);
+		final boolean hasMultiplePathParts = StringUtils.countMatches(path, '/') > 1 && !path.startsWith("/html/");
+		final Traits traits                = Traits.of(StructrTraits.PAGE);
+		final PropertyKey<String> pathKey  = traits.key(PageTraitDefinition.PATH_PROPERTY);
+		final PropertyKey<String> nameKey  = traits.key(NodeInterfaceTraitDefinition.NAME_PROPERTY);
+		final String name                  = PathHelper.getName(path);
 
 		// Find pages by path or name
-		final List<Page> possiblePages = StructrApp.getInstance(securityContext).nodeQuery(Page.class)
+		final List<NodeInterface> possiblePages = StructrApp.getInstance(securityContext).nodeQuery(StructrTraits.PAGE)
 			.or()
-				.notBlank(pathKey)
-				.and(pathKey, path)
-				.parent()
-			.or()
-				.blank(pathKey)
-				.and(nameKey, name)
-				.parent()
+				.key(pathKey, path)
+				.key(nameKey, name)
 			.sort(pathKey)
 			.getAsList();
 
-		for (final Page page : possiblePages) {
+		for (final NodeInterface node : possiblePages) {
 
-			if (EditMode.CONTENT.equals(edit) || isVisibleForSite(securityContext.getRequest(), page)) {
+			final Page page = node.as(Page.class);
+
+			if (!hasMultiplePathParts && (EditMode.CONTENT.equals(edit) || isVisibleForSite(securityContext.getRequest(), page))) {
 
 				return page;
 			}
 		}
 
 		// Check direct access by UUID
-		if (name.length() == 32) {
+		final int nameLength = name.length();
 
-			final NodeInterface possiblePage = StructrApp.getInstance(securityContext).get(NodeInterface.class, name);
+		if (nameLength == 32 || nameLength == 36) {
 
-			if (possiblePage != null && possiblePage instanceof Page && (EditMode.CONTENT.equals(edit) || isVisibleForSite(securityContext.getRequest(), (Page) possiblePage))) {
+			final NodeInterface possiblePage = StructrApp.getInstance(securityContext).getNodeById(StructrTraits.NODE_INTERFACE, name);
 
-				return (Page) possiblePage;
+			if (possiblePage != null && possiblePage.is(StructrTraits.PAGE) && (EditMode.CONTENT.equals(edit) || isVisibleForSite(securityContext.getRequest(), possiblePage.as(Page.class)))) {
+
+				return possiblePage.as(Page.class);
 			}
 		}
 
@@ -1158,13 +1201,16 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 	 */
 	private Page findIndexPage(final SecurityContext securityContext, final EditMode edit) throws FrameworkException {
 
-		final PropertyKey<Integer> positionKey = StructrApp.key(Page.class, "position");
+		final Traits traits                    = Traits.of(StructrTraits.PAGE);
+		final PropertyKey<Integer> positionKey = traits.key(PageTraitDefinition.POSITION_PROPERTY);
 
-		List<Page> possiblePages = StructrApp.getInstance(securityContext).nodeQuery(Page.class).notBlank(positionKey).sort(positionKey).getAsList();
+		final List<NodeInterface> possiblePages = StructrApp.getInstance(securityContext).nodeQuery(StructrTraits.PAGE).notBlank(positionKey).sort(positionKey).getAsList();
 
-		for (Page page : possiblePages) {
+		for (final NodeInterface node : possiblePages) {
 
-			if (securityContext.isVisible(page) && ((EditMode.CONTENT.equals(edit) || isVisibleForSite(securityContext.getRequest(), page)) || (page.getEnableBasicAuth() && page.isVisibleToAuthenticatedUsers()))) {
+			final Page page = node.as(Page.class);
+
+			if (securityContext.isVisible(page) && ((EditMode.CONTENT.equals(edit) || isVisibleForSite(securityContext.getRequest(), page)) || (page.as(Linkable.class).getEnableBasicAuth() && node.isVisibleToAuthenticatedUsers()))) {
 
 				return page;
 			}
@@ -1196,23 +1242,24 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 			return false;
 		}
 
-		final PropertyKey<String> confirmationKey = StructrApp.key(User.class, "confirmationKey");
+		final PropertyKey<String> confirmationKey = Traits.of(StructrTraits.USER).key(UserTraitDefinition.CONFIRMATION_KEY_PROPERTY);
 
 		if (CONFIRM_REGISTRATION_PAGE.equals(path)) {
 
 			final App app = StructrApp.getInstance();
 
-			List<Principal> results;
+			List<NodeInterface> results;
 			try (final Tx tx = app.tx()) {
 
-				results = app.nodeQuery(Principal.class).and(confirmationKey, key).getAsList();
+				results = app.nodeQuery(StructrTraits.PRINCIPAL).key(confirmationKey, key).getAsList();
 
 				tx.success();
 			}
 
 			if (!results.isEmpty()) {
 
-				final Principal user = results.get(0);
+				final NodeInterface user = results.get(0);
+				long userId;
 
 				try (final Tx tx = app.tx()) {
 
@@ -1223,7 +1270,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 						if (Settings.RestUserAutologin.getValue()) {
 
-							AuthHelper.doLogin(request, user);
+							AuthHelper.doLogin(request, user.as(Principal.class));
 
 						} else {
 
@@ -1235,11 +1282,13 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 						logger.warn("Confirmation key for user {} is not valid anymore - refusing login.", user.getName());
 					}
 
+					userId = user.getNode().getId().getId();
+
 					tx.success();
 				}
 
 				// broadcast login to cluster for the user
-				Services.getInstance().broadcastLogin(user);
+				Services.getInstance().broadcastLogin(userId);
 
 				// Redirect to target path
 				final String targetPath = filterMaliciousRedirects(request.getParameter(TARGET_PATH_KEY));
@@ -1287,23 +1336,24 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 			return false;
 		}
 
-		final PropertyKey<String> confirmationKeyKey = StructrApp.key(User.class, "confirmationKey");
+		final PropertyKey<String> confirmationKeyKey = Traits.of(StructrTraits.USER).key(UserTraitDefinition.CONFIRMATION_KEY_PROPERTY);
 
 		if (RESET_PASSWORD_PAGE.equals(path)) {
 
 			final App app = StructrApp.getInstance();
 
-			List<Principal> results;
+			List<NodeInterface> results;
 			try (final Tx tx = app.tx()) {
 
-				results = app.nodeQuery(Principal.class).and(confirmationKeyKey, key).getAsList();
+				results = app.nodeQuery(StructrTraits.PRINCIPAL).key(confirmationKeyKey, key).getAsList();
 
 				tx.success();
 			}
 
 			if (!results.isEmpty()) {
 
-				final Principal user = results.get(0);
+				final NodeInterface user = results.get(0);
+				long userId;
 
 				try (final Tx tx = app.tx()) {
 
@@ -1316,10 +1366,10 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 							if (Settings.PasswordResetFailedCounterOnPWReset.getValue()) {
 
-								AuthHelper.resetFailedLoginAttemptsCounter(user);
+								AuthHelper.resetFailedLoginAttemptsCounter(user.as(Principal.class));
 							}
 
-							AuthHelper.doLogin(request, user);
+							AuthHelper.doLogin(request, user.as(Principal.class));
 
 						} else {
 
@@ -1331,10 +1381,12 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 						logger.warn("Confirmation key for user {} is not valid anymore - refusing login.", user.getName());
 					}
 
+					userId = user.getNode().getId().getId();
+
 					tx.success();
 				}
 
-				Services.getInstance().broadcastLogin(user);
+				Services.getInstance().broadcastLogin(userId);
 			}
 
 			// Redirect to target path
@@ -1352,80 +1404,38 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 	private List<Linkable> findPossibleEntryPointsByUuid(final SecurityContext securityContext, final HttpServletRequest request, final String uuid) throws FrameworkException {
 
-		final List<Linkable> possibleEntryPoints = (List<Linkable>) request.getAttribute(POSSIBLE_ENTRY_POINTS_KEY);
+		if (!uuid.isEmpty()) {
 
-		if (CollectionUtils.isNotEmpty(possibleEntryPoints)) {
-			return possibleEntryPoints;
-		}
+			final NodeInterface node = StructrApp.getInstance(securityContext).getNodeById(StructrTraits.LINKABLE, uuid);
+			if (node != null) {
 
-		if (uuid.length() > 0) {
-
-			logger.debug("Requested id: {}", uuid);
-
-			final Query query = StructrApp.getInstance(securityContext).nodeQuery();
-
-			query
-				.and()
-					.or()
-					.andTypes(Page.class)
-					.andTypes(File.class)
-					.parent()
-				.and(GraphObject.id, uuid);
-
-			// Searching for pages needs super user context anyway
-			List<Linkable> results = query.getAsList();
-
-			logger.debug("{} results", results.size());
-			request.setAttribute(POSSIBLE_ENTRY_POINTS_KEY, results);
-
-			return (List<Linkable>) results;
+				return List.of(node.as(Linkable.class));
+			}
 		}
 
 		return Collections.EMPTY_LIST;
 	}
 
-	private List<Linkable> findPossibleEntryPointsByPath(final SecurityContext securityContext, final HttpServletRequest request, final String path) throws FrameworkException {
+	private List<Linkable> findFilesByPath(final SecurityContext securityContext, final HttpServletRequest request, final String path) throws FrameworkException {
 
-		final List<Linkable> possibleEntryPoints = (List<Linkable>) request.getAttribute(POSSIBLE_ENTRY_POINTS_KEY);
-
-		if (CollectionUtils.isNotEmpty(possibleEntryPoints)) {
-			return possibleEntryPoints;
-		}
-
-		if (path.length() > 0) {
+		if (!path.isEmpty()) {
 
 			logger.debug("Requested path: {}", path);
 
-			final Query pageQuery = StructrApp.getInstance(securityContext).nodeQuery();
+			final List<Linkable> list = new LinkedList<>();
 
-			pageQuery.and(StructrApp.key(Page.class, "path"), path).andType(Page.class);
-			final List<Linkable> pages = pageQuery.getAsList();
+			for (final NodeInterface node : StructrApp.getInstance(securityContext).nodeQuery(StructrTraits.LINKABLE).key(pathPropertyForSearch, path).getResultStream()) {
 
-			final Query fileQuery = StructrApp.getInstance(securityContext).nodeQuery();
-			fileQuery.and(StructrApp.key(AbstractFile.class, "path"), path).andTypes(File.class);
+				list.add(node.as(Linkable.class));
+			}
 
-			final List<Linkable> files = fileQuery.getAsList();
-
-			logger.debug("Found {} pages and {} files/folders", new Object[] { pages.size(), files.size() });
-
-			final List<Linkable> linkables = (List<Linkable>) pages;
-			linkables.addAll(files);
-
-			request.setAttribute(POSSIBLE_ENTRY_POINTS_KEY, linkables);
-
-			return linkables;
+			return list;
 		}
 
 		return Collections.EMPTY_LIST;
 	}
 
-	private List<Linkable> findPossibleEntryPoints(final SecurityContext securityContext, final HttpServletRequest request, final String path) throws FrameworkException {
-
-		List<Linkable> possibleEntryPoints = (List<Linkable>) request.getAttribute(POSSIBLE_ENTRY_POINTS_KEY);
-
-		if (CollectionUtils.isNotEmpty(possibleEntryPoints)) {
-			return possibleEntryPoints;
-		}
+	private List<Linkable> findFiles(final SecurityContext securityContext, final HttpServletRequest request, final String path) throws FrameworkException {
 
 		final int numberOfParts = PathHelper.getParts(path).length;
 
@@ -1433,7 +1443,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 			logger.debug("Requested name {}", path);
 
-			possibleEntryPoints = findPossibleEntryPointsByPath(securityContext, request, path);
+			List<Linkable> possibleEntryPoints = findFilesByPath(securityContext, request, path);
 
 			if (possibleEntryPoints.isEmpty() && numberOfParts == 1) {
 				possibleEntryPoints = findPossibleEntryPointsByUuid(securityContext, request, PathHelper.getName(path));
@@ -1454,6 +1464,8 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 	private static boolean notModifiedSince(final HttpServletRequest request, HttpServletResponse response, final NodeInterface node, final boolean dontCache) {
 
+		final long t0 = System.currentTimeMillis();
+
 		boolean notModified = false;
 		final Date lastModified = node.getLastModifiedDate();
 
@@ -1464,13 +1476,13 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 		response.setHeader("Date", httpDateFormat.format(new Date()));
 
-		final Integer seconds = node instanceof Page ? ((Page)node).getCacheForSeconds() : (node instanceof File ? ((File)node).getCacheForSeconds() : null);
+		final Integer seconds = node.is(StructrTraits.PAGE) ? node.as(Page.class).getCacheForSeconds() : (node.is(StructrTraits.FILE) ? node.as(File.class).getCacheForSeconds() : null);
 		final Calendar cal    = new GregorianCalendar();
 
 		if (!dontCache && seconds != null) {
 
 			cal.add(Calendar.SECOND, seconds);
-			response.setHeader("Cache-Control", "max-age=" + seconds + ", s-maxage=" + seconds + "");
+			response.setHeader("Cache-Control", "max-age=" + seconds + ", s-maxage=" + seconds);
 			response.setHeader("Expires", httpDateFormat.format(cal.getTime()));
 
 		} else {
@@ -1523,9 +1535,11 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 			return;
 		}
 
+		final long t0 = System.currentTimeMillis();
+
 		final ServletOutputStream out         = response.getOutputStream();
 		final String downloadAsFilename       = request.getParameter(DOWNLOAD_AS_FILENAME_KEY);
-		final Map<String, Object> callbackMap = new LinkedHashMap<>();
+		final Map<String, Object> callbackMap = new HashMap<>();
 
 		// make edit mode available in callback method
 		callbackMap.put("editMode", edit);
@@ -1545,7 +1559,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 			callbackMap.put("requestedFileName", downloadAsFilename);
 		}
 
-		boolean dontCache = file.getProperty(StructrApp.key(File.class, "dontCache"));
+		boolean dontCache = file.dontCache();
 
 		if (!EditMode.WIDGET.equals(edit) && notModifiedSince(request, response, file, dontCache)) {
 
@@ -1579,7 +1593,11 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 				// 2b: stream file to response
 				final InputStream in = file.getInputStream();
-				final String contentType = file.getContentType();
+				// if the file is a dynamic file and we have set a custom contentType response header in the script, use that - otherwise use the content-type of the file
+				final String contentType = file.isTemplate() ? Optional.of(securityContext)
+						.map(SecurityContext::getResponse)
+						.map(ServletResponse::getContentType)
+						.orElse(file.getContentType()) : file.getContentType();;
 
 				if (contentType != null) {
 
@@ -1668,14 +1686,17 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 			}
 		}
 
-
 		// WIDGET mode means "opened in frontend", which we don't want to count as an external download
 		if (!EditMode.WIDGET.equals(edit)) {
 
 			// call onDownload callback
 			try {
 
-				file.invokeMethod(securityContext, "onDownload", callbackMap, false, new EvaluationHints());
+				final AbstractMethod method = Methods.resolveMethod(file.getTraits(), "onDownload");
+				if (method != null) {
+
+					method.execute(securityContext, file, NamedArguments.fromMap(callbackMap), new EvaluationHints());
+				}
 
 			} catch (FrameworkException fex) {
 				logger.warn("", fex);
@@ -1721,13 +1742,15 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 	}
 
-	private void resolvePossiblePropertyNamesForObjectResolution(final ConfigurationProvider config, final Query query, final String name) {
+	private void resolvePossiblePropertyNamesForObjectResolution(final Query query, final String name) {
+
+		final QueryGroup orGroup = query.or();
 
 		for (final String possiblePropertyName : possiblePropertyNamesForEntityResolving) {
 
 			final String[] parts = possiblePropertyName.split("\\.");
-			String className     = AbstractNode.class.getSimpleName();
-			String keyName       = AbstractNode.name.jsonName();
+			String className     = StructrTraits.NODE_INTERFACE;
+			String keyName       = "name";
 
 			switch (parts.length) {
 
@@ -1743,36 +1766,36 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 			if (StringUtils.isNoneBlank(className, keyName)) {
 
-				final Class type = config.getNodeEntityClass(className);
-				if (type != null) {
+				final Traits traits = Traits.of(className);
+				if (traits != null) {
 
-					final PropertyKey key = StructrApp.key(type, keyName);
+					final PropertyKey key = traits.key(keyName);
 					if (key != null) {
 
 						try {
 
-							final PropertyConverter converter = key.inputConverter(SecurityContext.getSuperUserInstance());
+							final PropertyConverter converter = key.inputConverter(SecurityContext.getSuperUserInstance(), false);
 							if (converter != null) {
 
 								// try converted value, fail silenty
-								query.or(key, converter.convert(name));
+								orGroup.key(key, converter.convert(name));
 
 							} else {
 
 								// try unconverted value, fail silently if it doesn't work
-								query.or(key, name);
+								orGroup.key(key, name);
 							}
 
 						} catch (FrameworkException ignore) { }
 
 					} else {
 
-						logger.warn("Unable to find property key {} of type {} defined in key {} used for object resolution.", new Object[] { keyName, className, possiblePropertyName } );
+						logger.warn("Unable to find property key {} of type {} defined in key {} used for object resolution.", keyName, className, possiblePropertyName);
 					}
 
 				} else {
 
-					logger.warn("Unable to find type {} defined in key {} used for object resolution.", new Object[] { className, possiblePropertyName } );
+					logger.warn("Unable to find type {} defined in key {} used for object resolution.", className, possiblePropertyName);
 				}
 			}
 		}
@@ -1780,41 +1803,43 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 	private HttpBasicAuthResult checkHttpBasicAuth(final SecurityContext outerSecurityContext, final HttpServletRequest request, final HttpServletResponse response, final String path) throws IOException, FrameworkException {
 
-		final PropertyKey<Boolean> basicAuthKey     = StructrApp.key(Linkable.class, "enableBasicAuth");
-		final PropertyKey<Integer> positionKey      = StructrApp.key(Page.class, "position");
-		final PropertyKey<String> filePathKey       = StructrApp.key(File.class, "path");
-		final PropertyKey<String> pagePathKey       = StructrApp.key(Page.class, "path");
+		final PropertyKey<Boolean> basicAuthKey     = Traits.of(StructrTraits.LINKABLE).key(LinkableTraitDefinition.ENABLE_BASIC_AUTH_PROPERTY);
+		final PropertyKey<Integer> positionKey      = Traits.of(StructrTraits.PAGE).key(PageTraitDefinition.POSITION_PROPERTY);
+		final PropertyKey<String> filePathKey       = Traits.of(StructrTraits.FILE).key(AbstractFileTraitDefinition.PATH_PROPERTY);
+		final PropertyKey<String> pagePathKey       = Traits.of(StructrTraits.PAGE).key(PageTraitDefinition.PATH_PROPERTY);
 
 		// Look for renderable objects using a SuperUserSecurityContext,
 		// but dont actually render the page. We're only interested in
 		// the authentication settings.
-		Linkable possiblePage = null;
+		NodeInterface possiblePage = null;
 
 		// try the different methods..
 		if (possiblePage == null) {
-			possiblePage = StructrApp.getInstance().nodeQuery(Page.class).and(pagePathKey, path).and(basicAuthKey, true).sort(positionKey).getFirst();
+			possiblePage = StructrApp.getInstance().nodeQuery(StructrTraits.PAGE).key(pagePathKey, path).key(basicAuthKey, true).sort(positionKey).getFirst();
 		}
 
 		if (possiblePage == null) {
-			possiblePage = StructrApp.getInstance().nodeQuery(Page.class).and(Page.name, PathHelper.getName(path)).and(basicAuthKey, true).sort(positionKey).getFirst();
+			possiblePage = StructrApp.getInstance().nodeQuery(StructrTraits.PAGE).key(Traits.of(StructrTraits.PAGE).key(NodeInterfaceTraitDefinition.NAME_PROPERTY), PathHelper.getName(path)).key(basicAuthKey, true).sort(positionKey).getFirst();
 		}
 
 		if (possiblePage == null) {
-			possiblePage = StructrApp.getInstance().nodeQuery(File.class).and(filePathKey, path).and(basicAuthKey, true).getFirst();
+			possiblePage = StructrApp.getInstance().nodeQuery(StructrTraits.FILE).key(filePathKey, path).key(basicAuthKey, true).getFirst();
 		}
 
 		if (possiblePage == null) {
-			possiblePage = StructrApp.getInstance().nodeQuery(File.class).and(File.name, PathHelper.getName(path)).and(basicAuthKey, true).getFirst();
+			possiblePage = StructrApp.getInstance().nodeQuery(StructrTraits.FILE).key(Traits.of(StructrTraits.FILE).key(NodeInterfaceTraitDefinition.NAME_PROPERTY), PathHelper.getName(path)).key(basicAuthKey, true).getFirst();
 		}
 
 		if (possiblePage != null) {
 
-			String realm = possiblePage.getBasicAuthRealm();
+			String realm = possiblePage.as(Linkable.class).getBasicAuthRealm();
 			if (realm == null) {
 
 				realm = possiblePage.getName();
+
 			} else {
-				realm = (String)Scripting.replaceVariables(new ActionContext(outerSecurityContext), possiblePage, realm, false, "realm");
+
+				realm = Scripting.replaceVariables(new ActionContext(outerSecurityContext), possiblePage, realm, false, "realm");
 			}
 
 			// check Http Basic Authentication headers
@@ -1826,13 +1851,13 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 					// find and instantiate the page again so that the SuperUserSecurityContext
 					// can not leak into any of the children of the given page. This is dangerous..
-					final Linkable page = StructrApp.getInstance(securityContext).get(Linkable.class, possiblePage.getUuid());
+					final NodeInterface page = StructrApp.getInstance(securityContext).getNodeById(StructrTraits.LINKABLE, possiblePage.getUuid());
 					if (page != null) {
 
 						securityContext.setRequest(request);
 						securityContext.setResponse(response);
 
-						return new HttpBasicAuthResult(AuthState.Authenticated, securityContext, page);
+						return new HttpBasicAuthResult(AuthState.Authenticated, securityContext, page.as(Linkable.class));
 					}
 				}
 			}
@@ -1865,7 +1890,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 				if ("Basic".equals(authType)) {
 
-					final String value   = new String(Base64.decode(authValue), Charset.forName("utf-8"));
+					final String value   = new String(Base64.decode(authValue), StandardCharsets.UTF_8);
 					final String[] parts = value.split(":");
 
 					if (parts.length == 2) {
@@ -1878,7 +1903,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 				if (StringUtils.isNoneBlank(username, password)) {
 
 					try {
-						return AuthHelper.getPrincipalForPassword(Principal.name, username, password);
+						return AuthHelper.getPrincipalForPassword(Traits.of(StructrTraits.PRINCIPAL).key(NodeInterfaceTraitDefinition.NAME_PROPERTY), username, password);
 
 					} catch (Throwable t) {
 						// ignore
@@ -1888,6 +1913,26 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 		}
 
 		return null;
+	}
+
+	private String getContentTypeOrDefault(final DOMNode rootElement) {
+
+		String contentType = "text/html;charset=UTF-8";
+
+		if (rootElement.is(StructrTraits.PAGE)) {
+
+			final String possibleContentType = rootElement.as(Page.class).getContentType();
+			if (StringUtils.isNotBlank(possibleContentType)) {
+
+				contentType = possibleContentType;
+
+				if (contentType.equals("text/html")) {
+					contentType = contentType.concat(";charset=UTF-8");
+				}
+			}
+		}
+
+		return contentType;
 	}
 
 	public static String filterMaliciousRedirects(final String source) {
@@ -1903,7 +1948,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 					final URI rel = uri.relativize(uri);
 
 					// concatenate path and query part
-					return URI.create(uri.getPath() + rel.toString()).toString();
+					return URI.create(uri.getPath() + rel).toString();
 
 				} else {
 
@@ -1917,6 +1962,7 @@ public class HtmlServlet extends AbstractServletBase implements HttpServiceServl
 
 		return null;
 	}
+
 	// ----- nested classes -----
 	private enum AuthState {
 		NoBasicAuth, MustAuthenticate, Authenticated
